force-app/main/default/objects/Team__c/Team__c.object-meta.xml
<CustomObject>
    <description>Object used for customer portal for Grainger to track teams made up of unisource and grainger people</description>
    <label>Team</label>
    <nameField>
        <label>Grainger   -   Unisource</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>