force-app/main/default/objects/Team__c/fields/CPM_Info__c.field-meta.xml
<CustomField>
    <fullName>CPM_Info__c</fullName>
    <formula>CSP3__r.Email &amp; BR() &amp; 
CSP3__r.Phone &amp; BR() &amp; 
CSP3__r.MailingStreet &amp; BR() &amp; 
CSP3__r.MailingCity+&quot;, &quot;+CSP3__r.MailingState+&quot; &quot;+CSP3__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Customer Program Manager</inlineHelpText>
    <label>Contact Info</label>
    <type>Text</type>
</CustomField>