force-app/main/default/objects/Team__c/fields/CSP2__c.field-meta.xml
<CustomField>
    <fullName>CSP2__c</fullName>
    <label>CSP Image Location 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>