force-app/main/default/objects/Team__c/fields/CSP2_lookup__c.field-meta.xml
<CustomField>
    <fullName>CSP2_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>CSP 2</inlineHelpText>
    <label>CSP</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Teams (CSP)</relationshipLabel>
    <relationshipName>Teams3</relationshipName>
    <type>Lookup</type>
</CustomField>