force-app/main/default/objects/Team__c/fields/CSP3__c.field-meta.xml
<CustomField>
    <fullName>CSP3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Customer Program Manager</inlineHelpText>
    <label>Customer Program Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Teams (CSP 3)</relationshipLabel>
    <relationshipName>Teams5</relationshipName>
    <type>Lookup</type>
</CustomField>