force-app/main/default/objects/Team__c/fields/CSP_4__c.field-meta.xml
<CustomField>
    <fullName>CSP_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>CSP 4</inlineHelpText>
    <label>CSP 4</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Teams (CSP 4)</relationshipLabel>
    <relationshipName>Teams6</relationshipName>
    <type>Lookup</type>
</CustomField>