force-app/main/default/objects/Team__c/fields/CSP__c.field-meta.xml
<CustomField>
    <fullName>CSP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>CSP 1</inlineHelpText>
    <label>CSP</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Teams (CSP)</relationshipLabel>
    <relationshipName>Teams2</relationshipName>
    <type>Lookup</type>
</CustomField>