force-app/main/default/objects/Team__c/fields/CSP_Image3__c.field-meta.xml
<CustomField>
    <fullName>CSP_Image3__c</fullName>
    <formula>IMAGE (  CSP_Image_location_3__c , &quot;Image Here&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Customer Program Manager Image</inlineHelpText>
    <label>Customer Program Manager Image</label>
    <type>Text</type>
</CustomField>