force-app/main/default/objects/Team__c/fields/CSP_Image_2__c.field-meta.xml
<CustomField>
    <fullName>CSP_Image_2__c</fullName>
    <formula>IMAGE (  CSP2__c , &quot;Photo Here&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CSP 2</inlineHelpText>
    <label>CSP Image</label>
    <type>Text</type>
</CustomField>