force-app/main/default/objects/Team__c/fields/CSP_Image__c.field-meta.xml
<CustomField>
    <fullName>CSP_Image__c</fullName>
    <formula>IMAGE ( CSP_Image_Location__c ,&quot;Image Pending&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CSP 1</inlineHelpText>
    <label>CSP Image</label>
    <type>Text</type>
</CustomField>