force-app/main/default/objects/Team__c/fields/CSP_Image_location_3__c.field-meta.xml
<CustomField>
    <fullName>CSP_Image_location_3__c</fullName>
    <label>CSP Image location 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>