force-app/main/default/objects/Team__c/fields/CSP_Image_Location_4__c.field-meta.xml
<CustomField>
    <fullName>CSP_Image_Location_4__c</fullName>
    <label>CSP Image Location 4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>