force-app/main/default/objects/Team__c/fields/CSP_Information_2__c.field-meta.xml
<CustomField>
    <fullName>CSP_Information_2__c</fullName>
    <formula>CSP2_lookup__r.Email &amp; BR() &amp; 
CSP2_lookup__r.Phone &amp; BR() &amp; 
CSP2_lookup__r.MailingStreet &amp; BR() &amp; 
CSP2_lookup__r.MailingCity+&quot;, &quot;+CSP2_lookup__r.MailingState+&quot; &quot;+CSP2_lookup__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CSP 2</inlineHelpText>
    <label>Contact Info</label>
    <type>Text</type>
</CustomField>