force-app/main/default/objects/Team__c/fields/CSP_Information__c.field-meta.xml
<CustomField>
    <fullName>CSP_Information__c</fullName>
    <formula>CSP__r.Email &amp; BR() &amp; 
CSP__r.Phone &amp; BR() &amp; 
CSP__r.MailingStreet &amp; BR() &amp; 
CSP__r.MailingCity+&quot;, &quot;+CSP__r.MailingState+&quot; &quot;+CSP__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CSP 1</inlineHelpText>
    <label>Contact Info</label>
    <type>Text</type>
</CustomField>