force-app/main/default/objects/Team__c/fields/Grainger__c.field-meta.xml
<CustomField>
    <fullName>Grainger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grainger</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Teams (Grainger)</relationshipLabel>
    <relationshipName>Teams1</relationshipName>
    <type>Lookup</type>
</CustomField>