force-app/main/default/objects/Team__c/fields/Grainger_Info__c.field-meta.xml
<CustomField>
    <fullName>Grainger_Info__c</fullName>
    <formula>Grainger__r.Email &amp; BR() &amp; 
Grainger__r.Phone &amp; BR() &amp;
Grainger__r.MailingStreet  &amp; BR() &amp;
Grainger__r.MailingCity+&quot;, &quot;+Grainger__r.MailingState+&quot;  &quot;+Grainger__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Info</label>
    <type>Text</type>
</CustomField>