force-app/main/default/objects/Team__c/fields/Image_Location2__c.field-meta.xml
<CustomField>
    <fullName>Image_Location2__c</fullName>
    <label>Unisource Image Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>