force-app/main/default/objects/Team__c/fields/Image_Location__c.field-meta.xml
<CustomField>
    <fullName>Image_Location__c</fullName>
    <label>Grainger Image Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>