force-app/main/default/objects/Team__c/fields/NAM_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>NAM_Contact_Info__c</fullName>
    <label>Contact Info</label>
    <type>TextArea</type>
</CustomField>