force-app/main/default/objects/Team__c/fields/NAM_image_location__c.field-meta.xml
<CustomField>
    <fullName>NAM_image_location__c</fullName>
    <label>NAM image location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>