force-app/main/default/objects/Team__c/fields/NAM_Photo__c.field-meta.xml
<CustomField>
    <fullName>NAM_Photo__c</fullName>
    <formula>IMAGE ( CSP_Image_Location_4__c  , &quot;Photo Here&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>National Accounts Manager</inlineHelpText>
    <label>National Accounts Manager Image</label>
    <type>Text</type>
</CustomField>