force-app/main/default/objects/Team__c/fields/National_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>National_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>National Account Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Teams (National Account Manager)</relationshipLabel>
    <relationshipName>Teams4</relationshipName>
    <type>Lookup</type>
</CustomField>