force-app/main/default/objects/Team__c/fields/National_Account_Manager_Image__c.field-meta.xml
<CustomField>
    <fullName>National_Account_Manager_Image__c</fullName>
    <formula>IMAGE (  NAM_image_location__c , &quot;Image Here&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Account Manager</label>
    <type>Text</type>
</CustomField>