force-app/main/default/objects/Team__c/fields/Picture_2__c.field-meta.xml
<CustomField>
    <fullName>Picture_2__c</fullName>
    <formula>IMAGE ( Image_Location2__c , &quot;No Photo&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unisource Image</label>
    <type>Text</type>
</CustomField>