force-app/main/default/objects/Team__c/fields/Picture__c.field-meta.xml
<CustomField>
    <fullName>Picture__c</fullName>
    <formula>IMAGE ( Image_Location__c, &quot;No Photo&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grainger Image</label>
    <type>Text</type>
</CustomField>