force-app/main/default/objects/Team__c/fields/Servicing_Division__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Servicing Division</label>
    <referenceTo>Servicing_Division__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
</CustomField>