force-app/main/default/objects/Team__c/fields/U_Phone__c.field-meta.xml
<CustomField>
    <fullName>U_Phone__c</fullName>
    <formula>Unisource__r.Email &amp; BR() &amp; 
Unisource__r.Phone &amp; BR() &amp; 
Unisource__r.MailingStreet &amp; BR() &amp; 
Unisource__r.MailingCity+&quot;, &quot;+Unisource__r.MailingState+&quot; &quot;+Unisource__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Info</label>
    <type>Text</type>
</CustomField>