force-app/main/default/objects/Team__c/fields/Unisource__c.field-meta.xml
<CustomField>
    <fullName>Unisource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unisource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
</CustomField>