force-app/main/default/objects/Team__c/recordTypes/Unisource_and_Grainger.recordType-meta.xml
<RecordType>
    <fullName>Unisource_and_Grainger</fullName>
    <active>true</active>
    <label>Unisource and Grainger</label>
</RecordType>