force-app/main/default/objects/Team__c/recordTypes/Unisource_National_Accounts.recordType-meta.xml
<RecordType>
    <fullName>Unisource_National_Accounts</fullName>
    <active>true</active>
    <label>Unisource National Accounts</label>
</RecordType>