force-app/main/default/objects/Team__c/recordTypes/Unisource_only.recordType-meta.xml
<RecordType>
    <fullName>Unisource_only</fullName>
    <active>true</active>
    <label>Unisource CSP only</label>
</RecordType>