force-app/main/default/objects/Team__c/listViews/GraingerUnisourceDetails.listView-meta.xml
<ListView>
    <fullName>GraingerUnisourceDetails</fullName>
    <columns>NAME</columns>
    <columns>Unisource__c</columns>
    <columns>U_Phone__c</columns>
    <columns>Image_Location2__c</columns>
    <columns>Grainger__c</columns>
    <columns>Image_Location__c</columns>
    <columns>Grainger_Info__c</columns>
    <columns>CSP__c</columns>
    <columns>CSP_Image_Location__c</columns>
    <columns>CSP_Information__c</columns>
    <columns>CSP2_lookup__c</columns>
    <columns>CSP2__c</columns>
    <columns>CSP_Information_2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Team__c.Unisource_and_Grainger</value>
    </filters>
    <label>Grainger - Unisource Details</label>
</ListView>