force-app/main/default/objects/Team__c/listViews/UnisourceNationalAccounts.listView-meta.xml
<ListView>
    <fullName>UnisourceNationalAccounts</fullName>
    <columns>NAME</columns>
    <columns>National_Account_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Team__c.Unisource_National_Accounts</value>
    </filters>
    <label>Unisource - National Accounts Team</label>
</ListView>